--- a/exemplo.tex
+++ b/exemplo.tex
@@ -1,9 +1,11 @@
 \documentclass[aspectratio=169]{beamer}
 
 \usetheme{Drone}
+\setbackground{img/background1.png} % Defina aqui sua imagem de fundo
 
 \title{Seu Título}
 \author{Seu Nome}
+\date{\today}
 
 \begin{document}
 
