elimina warning de biblatex

--- a/beamerthemeDrone.sty
+++ b/beamerthemeDrone.sty
@@ -5,6 +5,7 @@
 % --- 1. Requisitos ---
 \RequirePackage{tikz}
 
+\RequirePackage{csquotes}
 \RequirePackage[backend=biber,style=authoryear]{biblatex} 
 \setlength{\bibitemsep}{0.5\baselineskip} % Adiciona um espaçamento entre cada item
 
