usar exemplos biblatex

--- a/exemplo.tex
+++ b/exemplo.tex
@@ -5,7 +5,7 @@
 \usetheme{Drone}
 \setbackground{img/background1.png} % Defina aqui sua imagem de fundo
 
-\addbibresource{referencias.bib}
+\addbibresource{biblatex-examples.bib}
 
 \title{Seu Título}
 \author{Seu Nome}
